--- a/TimelineWallpaper.csproj
+++ b/TimelineWallpaper.csproj
@@ -130,10 +130,17 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Beans\MtyApiItem.cs" />
+    <Compile Include="Beans\ToubiecApiItem.cs" />
+    <Compile Include="Beans\DmoeApiItem.cs" />
     <Compile Include="Beans\InfinityApi.cs" />
     <Compile Include="Beans\YmyouliApi.cs" />
     <Compile Include="Beans\PixivelApi.cs" />
     <Compile Include="Beans\LofterApi.cs" />
+    <Compile Include="Providers\SeovxProvider.cs" />
+    <Compile Include="Providers\MtyProvider.cs" />
+    <Compile Include="Providers\ToubiecProvider.cs" />
+    <Compile Include="Providers\DmoeProvider.cs" />
     <Compile Include="Providers\PaulProvider.cs" />
     <Compile Include="Providers\InfinityProvider.cs" />
     <Compile Include="Providers\YmyouliProvider.cs" />
