coolapk to timeline

--- a/TimelineWallpaper.csproj
+++ b/TimelineWallpaper.csproj
@@ -130,7 +130,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Beans\CoolapkApi.cs" />
+    <Compile Include="Beans\TimelineApi.cs" />
     <Compile Include="Beans\MxgApi.cs" />
     <Compile Include="Beans\MtyApiItem.cs" />
     <Compile Include="Beans\ToubiecApiItem.cs" />
@@ -140,7 +140,7 @@
     <Compile Include="Beans\PixivelApi.cs" />
     <Compile Include="Beans\LofterApi.cs" />
     <Compile Include="Providers\MxgProvider.cs" />
-    <Compile Include="Providers\CoolapkProvider.cs" />
+    <Compile Include="Providers\TimelineProvider.cs" />
     <Compile Include="Providers\SeovxProvider.cs" />
     <Compile Include="Providers\MtyProvider.cs" />
     <Compile Include="Providers\ToubiecProvider.cs" />
