--- a/TimelineWallpaper.csproj
+++ b/TimelineWallpaper.csproj
@@ -182,7 +182,9 @@
     <Content Include="Assets\BadgeLogo.scale-150.png" />
     <Content Include="Assets\BadgeLogo.scale-200.png" />
     <Content Include="Assets\BadgeLogo.scale-400.png" />
-    <Content Include="Assets\MouseClick.jpg" />
+    <Content Include="Assets\Images\donate_alipay.png" />
+    <Content Include="Assets\Images\donate_wechat.png" />
+    <Content Include="Assets\Images\tip_menu.jpg" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-125.png" />
     <Content Include="Assets\LargeTile.scale-150.png" />
