--- a/TimelineWallpaper.csproj
+++ b/TimelineWallpaper.csproj
@@ -130,9 +130,11 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Beans\ObzhiApi.cs" />
     <Compile Include="Beans\ReleaseApi.cs" />
     <Compile Include="Beans\ContributeApiReq.cs" />
     <Compile Include="Beans\RankApiReq.cs" />
+    <Compile Include="Beans\CrashApiReq.cs" />
     <Compile Include="Beans\StatsApiReq.cs" />
     <Compile Include="Beans\OneApi.cs" />
     <Compile Include="Beans\EdgeApi.cs" />
@@ -155,6 +157,7 @@
     <Compile Include="Providers\BoboProvider.cs" />
     <Compile Include="Providers\Himawari8Provider.cs" />
     <Compile Include="Providers\OneProvider.cs" />
+    <Compile Include="Providers\ObzhiProvider.cs" />
     <Compile Include="Providers\TimelineProvider.cs" />
     <Compile Include="Providers\SeovxProvider.cs" />
     <Compile Include="Providers\MtyProvider.cs" />
@@ -286,9 +289,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AppCenter.Crashes">
-      <Version>4.5.0</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.13</Version>
     </PackageReference>
