--- a/TimelineWallpaper.csproj
+++ b/TimelineWallpaper.csproj
@@ -112,6 +112,7 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
+    <Optimize>false</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -205,6 +206,7 @@
     <Content Include="Assets\Images\donate_alipay.png" />
     <Content Include="Assets\Images\donate_wechat.png" />
     <Content Include="Assets\Images\tip_menu.jpg" />
+    <Content Include="Assets\Ini\glitter.txt" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-125.png" />
     <Content Include="Assets\LargeTile.scale-150.png" />
